fix: update icon size

--- a/pages/main/main.html
+++ b/pages/main/main.html
@@ -173,7 +173,7 @@
           <p class="donation-subtitle">Name of the bank / Type of bank account</p>
           <div class="card">
             <img class="card-image" src="../../assets/icons/donation.svg" alt="card">
-            <span><a class="card-number" href="#">8380 2880 8028 8791 7435</a></span>
+            <span class="card-number" href="#">8380 2880 8028 8791 7435</span>
           </div>
           <p class="donation-text">Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
         </div>
