refactor: comment arrows for next implementation

--- a/pages/main/main.html
+++ b/pages/main/main.html
@@ -78,9 +78,9 @@
         <div class="content wrapper-friends">
           <p class="section-title title-friends">Our friends who <br> are looking for a house</p>
           <div class="slider">
-            <div class="arrow arrow-left">
+            <!-- <div class="arrow arrow-left">
               <img class="image-arrow" src="../../assets/icons/Arrow-left.svg" alt="arrow">
-            </div>
+            </div> -->
             <div class="slider-list">
               <div id="Katrine" class="slider__item slider__item__first">
                 <img src="../../assets/images/friends-katrine.png" alt="cat">
@@ -101,9 +101,9 @@
               </div>
   
             </div>
-            <div class="arrow arrow-right">
+            <!-- <div class="arrow arrow-right">
               <img class="image-arrow" src="../../assets/icons/Arrow-right.svg" alt="arrow">
-            </div>
+            </div> -->
           </div>
           <a href="../../pages/pets/pets.html">
             <button type="button" class="button button__solid button-friends">Get to know the rest</button>
