--- a/pages/pets/pets.html
+++ b/pages/pets/pets.html
@@ -97,7 +97,7 @@
 
         </div>
       
-        <div class="switch">
+        <!-- <div class="switch">
                 
           <div class="switch-item switch-item__disable">
             <img class="image-switch" src="../../assets/icons/switch 1.svg" alt="switch">
@@ -115,7 +115,7 @@
             <img class="image-switch" src="../../assets/icons/switch 2.svg" alt="switch">
           </div>
 
-        </div>
+        </div> -->
     </div>
   </section>
 
